--- a/src/blocks/modules/nav/nav.scss
+++ b/src/blocks/modules/nav/nav.scss
@@ -12,7 +12,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 999;
+    z-index: 99999;
     transition: .2s;
     &.shadow {
         box-shadow: 0 4px 20px #bababa;
